--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,25 @@
 html, body {
   width: 100%;
   height: 100%;
-  background-color: turquoise;
+  background-color: #ffffb3;
+}
+
+.heading {
+  text-align: center;
+}
+
+.everything {
+  width:100vw;
+}
+
+.column .textInput, .column .submit {
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+  width:350px;
+  resize: none;
+}
+
+.inside {
+  margin-top:100px;
 }
