Add code to show user whether number inputted is prime or not

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html, body {
   background-color: #ffffb3;
 }
 
-.heading {
+.heading, .primeOrNot {
   text-align: center;
 }
 
@@ -12,7 +12,7 @@ html, body {
   width:100vw;
 }
 
-.column .textInput, .column .submit {
+.column .textInput, .column .submit, .column .output {
   display:block;
   margin-left:auto;
   margin-right:auto;
@@ -22,4 +22,18 @@ html, body {
 
 .inside {
   margin-top:100px;
+}
+
+#myProgress {
+  width: 100%;
+  background-color: #ddd;
+}
+
+#myBar {
+  width: 0%;
+  height: 30px;
+  background-color: #4CAF50;
+  text-align: center;
+  line-height: 30px;
+  color: white;
 }
